# NPodOdom

./: .gitignore  elm.json
C++/NPodOdom/: CMakeLists.txt  Mat.h  Vec.h  main.cpp  odometry.cpp  odometry.h
Notebooks/: encoderdeltas.csv  npod.ipynb  npod2.ipynb  predictPerpindiculars.ipynb  predictPerpindiculars2.html  predictPerpindiculars2.ipynb  wpiway.ipynb
src/: Main.elm  Mat.elm  MatN.elm  Math.elm  Pod.elm  Vec.elm  Vec2.elm  VecN.elm
